[project]
name = "equity_in_post_hct_predictions"
version = "0.1.0"
description = ""
authors = [
    {name = "amulyaprasanth",email = "amulyaprasanth301@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "numpy (<2)",
    "pandas (>=2.2.3,<3.0.0)",
    "sweetviz (>=2.3.1,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "setuptools (>=77.0.3,<78.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
